[package]
name = "od-get"
version = "0.1.0"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/od-get"
homepage = "https://github.com/Bernd-L/od-get#readme"
readme = "README.md"
documentation = "https://docs.rs/od-get"
description = "A Rust tool for recursively crawling & downloading data from open directories"
include = ["/README.md", "/LICENSE.md", "/Cargo.toml", "/Cargo.lock", "/src"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
anyhow = "1.0"
clap = "2.33.3"
chrono = "0.4.19"
scraper = "0.12.0"
serde_json = "1.0"
tokio = { version = "1.1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4"
rayon = "1.5"
html-escape = "0.2.6"
